# agent-utils

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  linear-extra-mcp-wrapper  package.json
.beads/: issues.jsonl
.claude-plugin/: marketplace.json
.github/: actionlint.yaml
android/: README.md  SKILL.md
crates/skill-server/: Cargo.toml
crates/skill-server/src/: lib.rs  main.rs
crates/skill-server/tests/: cli.rs
docs/: README.md  app-automation.md  bead-workflow.md  extension-capability-boundaries.md  extension-tool-schemas.md  index.html  kitty-graphics-protocol-audit.md  pi-graphics.md  realtime-agent.md  realtime-config-provenance.md  testing.md  tools.json
extensions/: android.js  app-automation.js  compaction-continue-guard.js  copilot-auth-refresh.js  effort.js  firecracker-vm.js  force-agent-speech.js  git-behind-warning.js  kitty-graphics.js  kitty-image-preview.js  m.js  pi-graphics.js  pi-self-update.js  realtime-agent.js  self-compact.js  tendril-command.js  tendril-share.js  true-defaults.js  web-search-http.js  web-search-models.js  web-search.js  xvfb.js
linear-extra/: README.md  flake.nix  pyproject.toml
linear-extra/src/linear_extra_mcp/: __init__.py  prosemirror.py  server.py
linear-extra/tests/: test_prosemirror.py
pi-wasm/: .gitignore  FEASIBILITY.md  MICROVM-FEASIBILITY.md  README.md  flake.nix  index.html  microvm-demo.html  package-lock.json  package.json  playwright.config.ts  provider-demo.html  settings-demo.html  shell.html  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: coverage-summary.mjs  kitty-animation-smoke.mjs  kitty-image-preview-multi-image-render-smoke.mjs  lint-workflows.mjs  render-pages.mjs  render-pi-graphics-contact-sheet.mjs  render-pi-graphics-smoke.mjs  render-pi-theme-swatch.mjs  test-kitty-animation.mjs  test-kitty-image-preview-widget-smoke.mjs  test-pi-graphics-tmux-smoke.mjs
test/: affordances-smoke.test.js  anchor-thinking.test.js  android-emulator-capture.test.js  android-extension.test.js  ansi-width.test.js  app-automation-display-path.test.js  app-automation-doctor.test.js  app-automation-editor.test.js  app-automation-hooks.test.js  app-automation.test.js  bounded-exec.test.js  box-chrome.test.js  color-utils.test.js  compact-chat-spacing.test.js  compaction-continue-guard.test.js  copilot-auth-refresh.test.js  coverage-summary.test.js  effort-command.test.js  env-args.test.js  extension-command-registration.test.js  extensions-load-smoke.test.js  firecracker-vm-core.test.js  firecracker-vm-hooks.test.js  footer-layout.test.js  footer-text.test.js  force-agent-speech.test.js  git-behind-warning.test.js  (+75 more)
web-search/: README.md  flake.nix  pyproject.toml
web-search/plugins/web-search/.claude-plugin/: plugin.json
web-search/plugins/web-search/commands/: web-search.md
web-search/src/web_search_mcp/: server.py
web-search/tests/: test_server.py
(+962 files in other folders)
