[project]
name = "linear-extra-mcp"
version = "0.1.0"
description = "MCP server exposing Linear comment-draft create/update/fetch/delete via the internal Linear GraphQL API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[dependency-groups]
dev = [
    "editables>=0.5",
    "pytest>=8.0",
    "ruff>=0.9.0",
]

[project.scripts]
linear-extra-mcp = "linear_extra_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linear_extra_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
