[project]
name = "web-search-mcp"
version = "0.1.1"
description = "Tiny stdio MCP server for GitHub Copilot-backed web search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[dependency-groups]
dev = [
    "editables>=0.5",
    "pytest>=8.0",
    "ruff>=0.9.0",
]

[project.scripts]
web-search-mcp = "web_search_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/web_search_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
