[package]
name = "skill-server"
description = "Dynamic skill and MCP server discovery utility for agents"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
mcp-cli = { path = "../mcp-cli" }
schemars = { version = "1.0.4", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tracing = "0.1.41"

[dev-dependencies]
tempfile = "3.20.0"

[[bin]]
name = "skill-server"
path = "src/main.rs"

[[bin]]
name = "ss"
path = "src/bin/ss.rs"

[lints]
workspace = true
